--- a/FieldTechTimeSheetB.html
+++ b/FieldTechTimeSheetB.html
@@ -253,9 +253,9 @@
 
 			color: black;
 
-			width: 11in;
+			width: 11.5in;
 
-			min-height: 8.5in;
+			min-height: in;
 
 			margin: .25in auto;
 
@@ -585,9 +585,7 @@
     <thead>
       <tr>
         <th class="rpt-text">Expense Type</th>
-        <th class="rpt-text"></th>
         <th class="rpt-currency">Expense Amount</th>				
-
       </tr>
     </thead>
     <tbody>
@@ -600,13 +598,11 @@
 
 {{/each}}
   <tr class="rpt-data-footer rpt-total">
-    <th></th>
     <th>{{Expense_Type_Formula__c}} Sub Total</th>
     <th>${{sum items "Expense_Amount__c"}}</th>
   </tr>
 {{/group}}
   <tr class="rpt-data-footer rpt-total">
-    <th></th>
     <th>Expense Total</th>
     <th>${{sum items "Expense_Amount__c"}}</th>
   </tr>
