--- a/FieldTechTimeSheetA.html
+++ b/FieldTechTimeSheetA.html
@@ -317,6 +317,12 @@
 	border: 1px solid #000000;
 	white-space: nowrap;
 }
+.auto-style32 {
+	border-bottom-style: none;
+	border-bottom-width: medium;
+	font-size: small;
+	font-weight: bold;
+}
 
 .auto-style33 {
 	border: 1px solid #000000;
@@ -425,7 +431,7 @@
                                 	
                                 		</tr>
                                 		<tr>
-                                		<td style="text-align:center" class="auto-style30">{{userProfile "FullName"}}</td>
+                                		<td style="text-align:center" class="auto-style32">{{userProfile "FullName"}}</td>
                                 		</tr>
                                 		
                                 		<tr>
