--- a/Field Tech Time Sheet/FieldTechTimeSheetE.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetE.html
@@ -682,10 +682,10 @@
 {{#filter FX5__Ticket_Items__r "RecordType.DeveloperName" is="BillableMileage"}}
 {{#group items "Expense_Type_Formula__c"}}
 {{#each items}}
-
+Extended_Amount__c
 {{/each}}
   <tr>
-    <th style="text-align:center" class="auto-style26">Cost: ${{formula <p>{{formula "{0} * {1})" FX5__Price__c FX5__Input_Qty__c}}</p></br> Markup: ${{sum items "Markup__c"}}</th>
+    <th style="text-align:center" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
     <th style="text-align:center" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
     <th></th>
     <th></th>
