--- a/Field Tech Time Sheet/FieldTechTimeSheetE.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetE.html
@@ -640,7 +640,7 @@
 <table>
     <thead>
       		<tr>
-			<th colspan="2" style="text-align:center">Expense</th>
+			<th colspan="2" style="text-align:center">Trip Expense</th>
 			</tr>
         <th style="text-align:center" class="auto-style33">Expense Type</th>
         <th style="text-align:center" class="auto-style33">Expense Amount</th>		
