--- a/Field Tech Time Sheet/FieldTechTimeSheetE.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetE.html
@@ -589,7 +589,7 @@
 	
 
 
-<table>
+<table align="right">
     <thead>
       		<tr>
 			<th colspan="2" style="text-align:center">Trip Expense</th>
@@ -612,8 +612,8 @@
 
 {{/each}}
   <tr>
-    <th style="text-align:center" class="auto-style26">{{Expense_Type_Formula__c}} Sub Total</th>
-    <th style="text-align:center" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
+    <th style="text-align:right" class="auto-style26">{{Expense_Type_Formula__c}} Sub Total</th>
+    <th style="text-align:right" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
     <th></th>
     <th></th>
     <th></th>
@@ -637,8 +637,8 @@
 
 {{/each}}
   <tr>
-    <th style="text-align:center" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
-    <th style="text-align:center" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
+    <th style="text-align:right" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
+    <th style="text-align:right" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
     <th></th>
     <th></th>
     <th></th>
