--- a/Field Tech Time Sheet/FieldTechTimeSheetF.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetF.html
@@ -591,13 +591,15 @@
 	
 
 
+
+
 <table align="right">
     <thead>
       		<tr>
 			<th colspan="2" style="text-align:center">Trip Expense</th>
 			</tr>
-        <th style="text-align:center" class="auto-style33">Expense Type</th>
-        <th style="text-align:center" class="auto-style33">Expense Amount</th>		
+        <th style="height:40px;width:100px;float:left;" class="auto-style33">Expense Type</th>
+        <th style="height:40px;width:100px;float:left;" class="auto-style33">Expense Amount</th>		
         <th></th>
         <th></th>
         <th></th>
@@ -614,21 +616,16 @@
 
 {{/each}}
   <tr>
-    <th style="text-align:right" class="auto-style26">{{Expense_Type_Formula__c}} Sub Total</th>
-    <th style="text-align:right" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
-    <th></th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th style="height:30px;width:100px;float:left;" class="auto-style26">{{Expense_Type_Formula__c}} Sub Total</th>
+    <th style="height:30px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
+
   </tr>
 {{/group}}
   <tr>
    <th>Expense Total</th>
- <th style="text-align:right"> ${{sum items "Extended_Amount__c"}}</th>
+ <th style="height:30px;width:100px;float:left;"> ${{sum items "Extended_Amount__c"}}</th>
     <th></th>
-     <th></th>
-     <th></th>
-     <th></th>
+
   </tr>
 {{/filter}}
 
@@ -639,25 +636,15 @@
 
 {{/each}}
   <tr>
-    <th style="text-align:right" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
-    <th style="text-align:right" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
-    <th></th>
-    <th></th>
-    <th></th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th style="height:30px;width:100px;float:left;" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
+    <th style="height:30px;width:100px;float:left;" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
+
   </tr>
 {{/group}}
   <tr>
    <th>Mileage Total</th>
- <th style="text-align:right"> ${{sum items "Extended_Amount__c"}}</th>
+ <th style="height:30px;width:100px;float:left;"> ${{sum items "Extended_Amount__c"}}</th>
     <th></th>
-     <th></th>
-     <th></th>
-     <th></th>
-     <th></th>
-     <th></th>
      <th></th>
   </tr>
 {{/filter}}
