--- a/Field Tech Time Sheet/FieldTechTimeSheetF.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetF.html
@@ -596,7 +596,7 @@
 <table align="right">
     <thead>
       		<tr>
-			<th colspan="2" style="text-align:center">Trip Expense</th>
+			<th colspan="2" style="text-align:left">Trip Expense</th>
 			</tr>
         <th style="height:40px;width:150px;float:left;" class="auto-style33">Expense Type</th>
         <th style="height:40px;width:100px;float:left;" class="auto-style33">Expense Amount</th>		
@@ -624,7 +624,7 @@
   <tr>
    <th>Expense Total</th>
  <th style="height:30px;width:100px;float:left;"> ${{sum items "Extended_Amount__c"}}</th>
-    <th></th>
+
 
   </tr>
 {{/filter}}
@@ -644,8 +644,7 @@
   <tr>
    <th>Mileage Total</th>
  <th style="height:30px;width:100px;float:left;"> ${{sum items "Extended_Amount__c"}}</th>
-    <th></th>
-     <th></th>
+
   </tr>
 {{/filter}}
 
