--- a/Field Tech Time Sheet/FieldTechTimeSheetF.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetF.html
@@ -598,12 +598,8 @@
       		<tr>
 			<th colspan="2" style="text-align:left">Trip Expense</th>
 			</tr>
-        <th style="height:40px;width:150px;float:left;" class="auto-style33">Expense Type</th>
-        <th style="height:40px;width:100px;float:left;" class="auto-style33">Expense Amount</th>		
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>		
+        <th style="height:20px;width:150px;float:left;" class="auto-style33">Expense Type</th>
+        <th style="height:20px;width:100px;float:left;" class="auto-style33">Expense Amount</th>		
       </tr>
     </thead>
     <tbody>
@@ -616,14 +612,13 @@
 
 {{/each}}
   <tr>
-    <th style="height:30px;width:150px;float:left;" class="auto-style26">{{Expense_Type_Formula__c}} Sub Total</th>
-    <th style="height:30px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
+    <th style="height:15px;width:150px;float:left;" class="auto-style26">{{Expense_Type_Formula__c}} Sub Total</th>
+    <th style="height:15px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
 
   </tr>
 {{/group}}
   <tr>
-   <th>Expense Total</th>
- <th style="height:30px;width:100px;float:left;"> ${{sum items "Extended_Amount__c"}}</th>
+ <th style="height:15px;width:100px;float:left;">Expense Total: ${{sum items "Extended_Amount__c"}}</th>
 
 
   </tr>
@@ -636,14 +631,13 @@
 
 {{/each}}
   <tr>
-    <th style="height:80px;width:150px;float:left;" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
-    <th style="height:80px;width:100px;float:left;" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
+    <th style="height:40px;width:150px;float:left;" class="auto-style26">Cost: ${{sum items "Extended_Amount__c"}}</br> Markup: ${{sum items "Markup__c"}}</th>
+    <th style="height:40px;width:100px;float:left;" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
 
   </tr>
 {{/group}}
   <tr>
-   <th>Mileage Total</th>
- <th style="height:30px;width:100px;float:left;"> ${{sum items "Extended_Amount__c"}}</th>
+ <th style="height:35px;width:100px;float:left;"> Mileage Total: ${{sum items "Extended_Amount__c"}}</th>
 
   </tr>
 {{/filter}}
