--- a/Field Tech Time Sheet/FieldTechTimeSheetF.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetF.html
@@ -618,8 +618,8 @@
   </tr>
 {{/group}}
   <tr>
-   <th style="height:15px;width:100px;float:right;">Expense Total:</th>
- <th style="height:15px;width:100px;float:left;">Expense Total: ${{sum items "Extended_Amount__c"}}</th>
+   <th style="height:35px;width:100px;float:right;">Expense Total:</th>
+ <th style="height:35px;width:100px;float:left;">${{sum items "Extended_Amount__c"}}</th>
 
 
   </tr>
@@ -639,7 +639,7 @@
 {{/group}}
   <tr>
  <th style="height:35px;width:100px;float:right;">Mileage Total:</th>
- <th style="height:15px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
+ <th style="height:35px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
 
   </tr>
 {{/filter}}
