--- a/Field Tech Time Sheet/FieldTechTimeSheetH.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetH.html
@@ -619,24 +619,24 @@
 
 
   <tr>
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:60px;float:left;" class="auto-style26"></th>	
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>	
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>		
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>		
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:50px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:60px;float:left;" class="auto-style26"></th>		
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>	
-        <th style="height:30px;width:240px;float:left;" class="auto-style26"></th>		
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
+        <th style="height:20px;width:60px;float:left;" class="auto-style26"></th>	
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>	
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>		
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>		
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
+        <th style="height:20px;width:50px;float:left;" class="auto-style26"></th>
+        <th style="height:20px;width:60px;float:left;" class="auto-style26"></th>		
+        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>	
+        <th style="height:20px;width:240px;float:left;" class="auto-style26"></th>		
       </tr>
 
   </tr>
 
   <tr>
-   <th colspan="r" style="text-align:center">Sub-Total Hours</th>
+   		<th style="height:30px;width:234px;float:left;" class="auto-style26">Sub-Total Hours</th>
         <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
         <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>		
         <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
@@ -648,35 +648,8 @@
 
 
   </tr>
-{{/filter}}
-
-
-{{#filter FX5__Ticket_Items__r "RecordType.DeveloperName" is="BillableMileage"}}
-{{#group items "Expense_Type_Formula__c"}}
-{{#each items}}
-
-{{/each}}
-  <tr>
-    <th style="height:30px;width:150px;float:left;" class="auto-style26">Number of Miles: {{sum items "FX5__Input_Qty__c"}}</th>
-    <th style="height:30px;width:100px;float:left;" class="auto-style26">Price per Mile: $1.50</th>
-
-  </tr>
-{{/group}}
-  <tr>
- <th style="height:15px;width:150px;float:left;" class="auto-style26">Mileage Total:</th>
- <th style="height:15px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
-
-  </tr>
-{{/filter}}
-
-{{#filter FX5__Ticket_Items__r "RecordType.DeveloperName" is="BillableExpense"}}
-  <tr>
- <th style="height:15px;width:150px;float:left;" class="auto-style26">Markup Total:</th>
- <th style="height:15px;width:100px;float:left;" class="auto-style26">${{sum items "Markup__c"}}</th>
-
-  </tr>
-{{/filter}}
-
+</tbody>
+</table>
 
 
 
