--- a/Field Tech Time Sheet/FieldTechTimeSheetJ.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetJ.html
@@ -653,7 +653,7 @@
 
 
 
-
+<div style="page-break-after:always"></div>
 <!--TABLE FORMATING - SECTION 1-->
 <TD>
 <TABLE BORDER="3" CELLPADDING="3" CELLSPACING="3">
@@ -732,8 +732,8 @@
       		<tr>
 			<th colspan="2" style="text-align:left">Parts Used</th>
 			</tr>
-        <th style="height:30px;width:150px;float:left;" class="auto-style33">Descripton</th>
-        <th style="height:30px;width:100px;float:left;" class="auto-style33">Amount</th>		
+        <th style="height:30px;width:75px;float:left;" class="auto-style33">Descripton</th>
+        <th style="height:30px;width:50px;float:left;" class="auto-style33">Amount</th>		
       </tr>
     </thead>
     <tbody>
@@ -746,14 +746,14 @@
 
 {{/each}}
   <tr>
-    <th style="height:15px;width:150px;float:left;" class="auto-style26">{{}}</th>
-    <th style="height:15px;width:100px;float:left;" class="auto-style26">${{"Extended_Amount__c"}}</th>
+    <th style="height:15px;width:75px;float:left;" class="auto-style26">{{}}</th>
+    <th style="height:15px;width:50px;float:left;" class="auto-style26">${{"Extended_Amount__c"}}</th>
 
   </tr>
 {{/group}}
   <tr>
-   <th style="height:15px;width:150px;float:left;" class="auto-style26">Sub Total:</th>
- <th style="height:15px;width:100px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
+   <th style="height:15px;width:75px;float:left;" class="auto-style26">Sub Total:</th>
+ <th style="height:15px;width:50px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
 
 
   </tr>
