--- a/Field Tech Time Sheet/FieldTechTimeSheetJ.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetJ.html
@@ -621,8 +621,8 @@
   <tr>
         <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
         <th style="height:20px;width:60px;float:left;" class="auto-style26"></th>	
-        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>	
-        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>		
+        <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Start_Time__c}}</th>	
+        <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Stop_Time__c}}</th>		
         <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
         <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>		
         <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
@@ -630,7 +630,7 @@
         <th style="height:20px;width:50px;float:left;" class="auto-style26"></th>
         <th style="height:20px;width:60px;float:left;" class="auto-style26"></th>		
         <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>	
-        <th style="height:20px;width:240px;float:left;" class="auto-style26"></th>		
+        <th style="height:20px;width:240px;float:left;" class="auto-style26">{{Description_of_Work_Performed__c}}</th>		
       </tr>
 
   </tr>
