--- a/Field Tech Time Sheet/FieldTechTimeSheetJ.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetJ.html
@@ -308,8 +308,7 @@
 }
 
 .auto-style98 {
-	border-bottom-style: none;
-	border-bottom-width: medium;
+	border: 1px solid #000000;
 	font-size: x-small;
 }
 .auto-style99 {
@@ -642,10 +641,10 @@
         <th style="height:20px;width:60px;float:left;" class="auto-style26">{{Weekend__c}}</th>	
         <th style="height:20px;width:40px;float:left;" class="auto-style26">{{formatDateTime Start_Time__c format="HH:mm"}}</th>	
         <th style="height:20px;width:40px;float:left;" class="auto-style26">{{formatDateTime Start_Time__c format="HH:mm"}}</th>	
-        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>		
-        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:20px;width:40px;float:left;" class="auto-style26"></th>
+        <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Time_Regular__c precision="2" separator="," decimal="."}}</th>
+        <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Time_Regular_OT__c precision="2" separator="," decimal="."}}</th>		
+        <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Time_Weekend__c precision="2" separator="," decimal="."}}</th>
+        <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Time_Weekend_OT__c precision="2" separator="," decimal="."}}</th>
         <th style="height:20px;width:50px;float:left;" class="auto-style26">{{Duration_Non_Rev__c}}</th>
         <th style="height:20px;width:60px;float:left;" class="auto-style26">{{Duration_Warranty_Hours__c}}</th>		
         <th style="height:20px;width:40px;float:left;" class="auto-style26">{{Duration_Non_Rev__c}}</th>	
@@ -656,10 +655,10 @@
 {{/each}}
   <tr>
    		<th style="height:30px;width:274px;float:left;" class="auto-style26">Sub-Total Hours</th>
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>		
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>
+        <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items Time_Regular__c precision="2" separator="," decimal="."}}</th>
+        <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items Time_Regular_OT__c precision="2" separator="," decimal="."}}</th>		
+        <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items Time_Weekend__c precision="2" separator="," decimal="."}}</th>
+        <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items Time_Weekend_OT__c precision="2" separator="," decimal="."}}</th>
         <th style="height:30px;width:50px;float:left;" class="auto-style26"></th>
         <th style="height:30px;width:60px;float:left;" class="auto-style26"></th>		
         <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>	
