--- a/Field Tech Time Sheet/FieldTechTimeSheetJ.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetJ.html
@@ -659,9 +659,9 @@
         <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items "Time_Regular_OT__c" precision="2" separator="," decimal="."}}</th>		
         <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items "Time_Weekend__c" precision="2" separator="," decimal="."}}</th>
         <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items "Time_Weekend_OT__c" precision="2" separator="," decimal="."}}</th>
-        <th style="height:30px;width:50px;float:left;" class="auto-style26"></th>
-        <th style="height:30px;width:60px;float:left;" class="auto-style26"></th>		
-        <th style="height:30px;width:40px;float:left;" class="auto-style26"></th>	
+        <th style="height:30px;width:50px;float:left;" class="auto-style26">{{sum items "Duration_Non_Rev__c" precision="2" separator="," decimal="."}}</th>
+        <th style="height:30px;width:60px;float:left;" class="auto-style26">{{sum items "Duration_Warranty_Hours__c" precision="2" separator="," decimal="."}}</th>		
+        <th style="height:30px;width:40px;float:left;" class="auto-style26">{{sum items "Duration_Non_Rev__c" precision="2" separator="," decimal="."}}</th>	
         <th style="height:30px;width:240px;float:left;" class="auto-style26">${{sum items "Extended_Amount__c"}}</th>
 
 
