--- a/Field Tech Time Sheet/FieldTechTimeSheetK.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetK.html
@@ -671,7 +671,7 @@
 </table>
 
 
-
+<!--PAGE BREAK-->
 <div style="page-break-after:always"></div>
 <!--TABLE FORMATING - SECTION 1-->
 <TD>
@@ -793,7 +793,7 @@
 
 <tr>
         <th style="height:30px;width:75px;float:left;" class="auto-style33">Amount</th>
-        <th style="height:30px;width:120px;float:left;" class="auto-style33">Descripton</th>		
+        <th style="height:30px;width:110px;float:left;" class="auto-style33">Descripton</th>		
       </tr>
     </thead>
     <tbody>
